manifests/apps/immich/immich-machine-learning.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
    env: home
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: RollingUpdate
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
        env: home
    spec:
      serviceAccount: default
      serviceAccountName: default
      automountServiceAccountToken: true
      enableServiceLinks: true
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      runtimeClassName: nvidia
      volumes:
      - name: model-cache
        persistentVolumeClaim:
          claimName: immich-machine-learning
      containers:
      - name: immich-machine-learning
        image: ghcr.io/immich-app/immich-machine-learning:v3.2.4-cuda
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 500m
            memory: 2Gi
          limits:
            memory: 5Gi
            nvidia.com/gpu: 1
        livenessProbe:
          httpGet:
            path: /ping
            port: 3003
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /ping
            port: 3003
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
        startupProbe:
          httpGet:
            path: /ping
            port: 3003
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 60
          timeoutSeconds: 5
        ports:
        - containerPort: 3003
        volumeMounts:
        - name: model-cache
          mountPath: /cache
