manifests/apps/immich/immich-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
    env: home
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
        env: home
    spec:
      serviceAccount: default
      serviceAccountName: default
      automountServiceAccountToken: true
      enableServiceLinks: true
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      runtimeClassName: nvidia
      volumes:
      - name: library
        persistentVolumeClaim:
          claimName: immich-server-photos
      containers:
      - name: immich-server
        image: ghcr.io/immich-app/immich-server:v3.3.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "1"
            memory: 2Gi
          limits:
            memory: 6Gi
            nvidia.com/gpu: 1
        livenessProbe:
          httpGet:
            path: /api/server/ping
            port: 2283
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/server/ping
            port: 2283
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
        startupProbe:
          httpGet:
            path: /api/server/ping
            port: 2283
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 60
          timeoutSeconds: 5
        ports:
        - containerPort: 2283
        volumeMounts:
        - name: library
          mountPath: /usr/src/app/upload
